--- a/5.md
+++ b/5.md
@@ -249,3 +249,5 @@ Connection: keep-alive
 ```
 
 ##### result
+If the command injection succeed, there will be a file named "a.txt" in the directory "www". The third request is used for checking "a.txt".
+
